[gd_scene load_steps=63 format=3 uid="uid://csj85o6s1ep81"]

[ext_resource type="Script" path="res://scavenger-hunt/scripts/world.gd" id="1_jxgm3"]
[ext_resource type="PackedScene" uid="uid://17wx3jdqs3le" path="res://scavenger-hunt/scenes/room1.tscn" id="1_u157h"]
[ext_resource type="PackedScene" uid="uid://2qdm2buwfiyl" path="res://scavenger-hunt/scenes/room2.tscn" id="3_yrd6d"]
[ext_resource type="Texture2D" uid="uid://ja5og8u6khm4" path="res://scavenger-hunt/assets/doors/glass/two-0.png" id="4_3ac8y"]
[ext_resource type="Texture2D" uid="uid://cvtkbjcg06s0u" path="res://scavenger-hunt/assets/doors/glass/glass-1.png" id="4_ancd8"]
[ext_resource type="PackedScene" uid="uid://byo5jn1nt53yv" path="res://scavenger-hunt/scenes/player.tscn" id="4_w582j"]
[ext_resource type="Texture2D" uid="uid://btsbm4tgkq3d3" path="res://scavenger-hunt/assets/doors/glass/two-1.png" id="5_4ah2f"]
[ext_resource type="Texture2D" uid="uid://dppovm2vnorlu" path="res://scavenger-hunt/assets/doors/glass/glass-2.png" id="5_ihh3w"]
[ext_resource type="Texture2D" uid="uid://cbfl1jwat80eh" path="res://scavenger-hunt/assets/doors/glass/glass-3.png" id="6_4gv6q"]
[ext_resource type="Texture2D" uid="uid://bqw4tl5r0dmty" path="res://scavenger-hunt/assets/doors/glass/two-3.png" id="6_waxyr"]
[ext_resource type="Texture2D" uid="uid://dv6f4xk0mhl6w" path="res://scavenger-hunt/assets/doors/glass/two-4.png" id="7_o4rpd"]
[ext_resource type="Texture2D" uid="uid://d1xfllg5ktmj8" path="res://scavenger-hunt/assets/doors/glass/glass-4.png" id="7_r3m0y"]
[ext_resource type="Texture2D" uid="uid://difuv1chgps3k" path="res://scavenger-hunt/assets/doors/glass/two-5.png" id="8_65brm"]
[ext_resource type="Texture2D" uid="uid://tqf5j2em4w70" path="res://scavenger-hunt/assets/doors/glass/glass-5.png" id="8_ivcbf"]
[ext_resource type="Texture2D" uid="uid://cs1xe0wi6wst2" path="res://scavenger-hunt/assets/doors/wood/door-5.png" id="10_u4qi8"]
[ext_resource type="Texture2D" uid="uid://brlxbsovtqpeg" path="res://scavenger-hunt/assets/doors/wood/door-4.png" id="11_i7h2n"]
[ext_resource type="Texture2D" uid="uid://c8rara0m14prn" path="res://scavenger-hunt/assets/doors/wood/door-3.png" id="12_65obh"]
[ext_resource type="Texture2D" uid="uid://bl137g4ij8x1g" path="res://scavenger-hunt/assets/doors/wood/door-2.png" id="13_lwkhj"]
[ext_resource type="Texture2D" uid="uid://cdbh06tixl85t" path="res://scavenger-hunt/assets/doors/wood/door-1.png" id="14_b2v1r"]
[ext_resource type="PackedScene" uid="uid://ciwfs2g02077f" path="res://scavenger-hunt/scenes/room4.tscn" id="15_eua0n"]
[ext_resource type="Texture2D" uid="uid://b35nwgw3rd8pi" path="res://scavenger-hunt/assets/doors/armor/armor-1.png" id="17_qj57u"]
[ext_resource type="Texture2D" uid="uid://cn6fej53ol1o2" path="res://scavenger-hunt/assets/doors/armor/armor-2.png" id="18_yiqqs"]
[ext_resource type="Texture2D" uid="uid://d3km1m1sod26d" path="res://scavenger-hunt/assets/doors/armor/armor-3.png" id="19_xd2am"]
[ext_resource type="Texture2D" uid="uid://dmbdfbgx3fm2o" path="res://scavenger-hunt/assets/doors/armor/armor-4.png" id="20_4ke4w"]
[ext_resource type="Texture2D" uid="uid://bw3iubb5t0ajj" path="res://scavenger-hunt/assets/doors/armor/armor-5.png" id="21_ahkmg"]
[ext_resource type="Texture2D" uid="uid://bqspm0vurfwop" path="res://scavenger-hunt/assets/room4/chair.png" id="22_po28j"]
[ext_resource type="Texture2D" uid="uid://cc4s1gbnd208s" path="res://scavenger-hunt/assets/doors/armor/armor-6.png" id="22_pvan3"]
[ext_resource type="Texture2D" uid="uid://d02336ixu6anl" path="res://scavenger-hunt/assets/room3/security.png" id="23_g6535"]
[ext_resource type="PackedScene" uid="uid://b18d830urpadj" path="res://scavenger-hunt/scenes/room3.tscn" id="23_s2607"]
[ext_resource type="Texture2D" uid="uid://bprnvt5m804bq" path="res://scavenger-hunt/assets/room3/bodyguard-1.png" id="24_mw65c"]
[ext_resource type="Texture2D" uid="uid://bmoxamkut33el" path="res://scavenger-hunt/assets/room3/bodyguard-2.png" id="25_0vo5n"]
[ext_resource type="Texture2D" uid="uid://lgmtedmg5occ" path="res://scavenger-hunt/assets/room3/bodyguard-3.png" id="26_mgua0"]
[ext_resource type="Texture2D" uid="uid://cygkxq3iqcq64" path="res://scavenger-hunt/assets/room3/bodyguard-4.png" id="27_0wev4"]
[ext_resource type="Texture2D" uid="uid://c8150afd1ys8x" path="res://scavenger-hunt/assets/room3/bodyguard-5.png" id="28_v78sb"]
[ext_resource type="PackedScene" uid="uid://d1bu06s83i25f" path="res://audio/audio.tscn" id="30_vp5yh"]

[sub_resource type="Curve2D" id="Curve2D_uv60c"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -30, 0, 0, 0, 0, 0.166504, -154.5)
}
point_count = 2

[sub_resource type="SpriteFrames" id="SpriteFrames_3ta1d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_3ac8y")
}, {
"duration": 1.0,
"texture": ExtResource("5_4ah2f")
}, {
"duration": 1.0,
"texture": ExtResource("6_waxyr")
}, {
"duration": 1.0,
"texture": ExtResource("7_o4rpd")
}, {
"duration": 1.0,
"texture": ExtResource("8_65brm")
}],
"loop": false,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_65brm")
}, {
"duration": 1.0,
"texture": ExtResource("7_o4rpd")
}, {
"duration": 1.0,
"texture": ExtResource("6_waxyr")
}, {
"duration": 1.0,
"texture": ExtResource("5_4ah2f")
}, {
"duration": 1.0,
"texture": ExtResource("4_3ac8y")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="Curve2D" id="Curve2D_27mid"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 38.2584, 1.5, 0, 0, 0, 0, 190.006, 0.085144, 0, 0, 0, 0, 190.006, -246)
}
point_count = 3

[sub_resource type="SpriteFrames" id="SpriteFrames_knhi5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_u4qi8")
}, {
"duration": 1.0,
"texture": ExtResource("11_i7h2n")
}, {
"duration": 1.0,
"texture": ExtResource("12_65obh")
}, {
"duration": 1.0,
"texture": ExtResource("13_lwkhj")
}, {
"duration": 1.0,
"texture": ExtResource("14_b2v1r")
}],
"loop": false,
"name": &"close",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_b2v1r")
}, {
"duration": 1.0,
"texture": ExtResource("13_lwkhj")
}, {
"duration": 1.0,
"texture": ExtResource("12_65obh")
}, {
"duration": 1.0,
"texture": ExtResource("11_i7h2n")
}, {
"duration": 1.0,
"texture": ExtResource("10_u4qi8")
}],
"loop": false,
"name": &"open",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_qchfk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_ivcbf")
}, {
"duration": 1.0,
"texture": ExtResource("7_r3m0y")
}, {
"duration": 1.0,
"texture": ExtResource("6_4gv6q")
}, {
"duration": 1.0,
"texture": ExtResource("5_ihh3w")
}, {
"duration": 1.0,
"texture": ExtResource("4_ancd8")
}],
"loop": false,
"name": &"close",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ancd8")
}, {
"duration": 1.0,
"texture": ExtResource("5_ihh3w")
}, {
"duration": 1.0,
"texture": ExtResource("6_4gv6q")
}, {
"duration": 1.0,
"texture": ExtResource("7_r3m0y")
}, {
"duration": 1.0,
"texture": ExtResource("8_ivcbf")
}],
"loop": false,
"name": &"open",
"speed": 10.0
}]

[sub_resource type="Curve2D" id="Curve2D_3vq65"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -5, -0.5, 0, 0, 0, 0, -0.833252, -50.3333, 0, 0, 0, 0, 235, -49.3333)
}
point_count = 3

[sub_resource type="SpriteFrames" id="SpriteFrames_qi83a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_ivcbf")
}, {
"duration": 1.0,
"texture": ExtResource("7_r3m0y")
}, {
"duration": 1.0,
"texture": ExtResource("6_4gv6q")
}, {
"duration": 1.0,
"texture": ExtResource("5_ihh3w")
}, {
"duration": 1.0,
"texture": ExtResource("4_ancd8")
}],
"loop": false,
"name": &"close",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ancd8")
}, {
"duration": 1.0,
"texture": ExtResource("5_ihh3w")
}, {
"duration": 1.0,
"texture": ExtResource("6_4gv6q")
}, {
"duration": 1.0,
"texture": ExtResource("7_r3m0y")
}, {
"duration": 1.0,
"texture": ExtResource("8_ivcbf")
}],
"loop": false,
"name": &"open",
"speed": 10.0
}]

[sub_resource type="Curve2D" id="Curve2D_ivllc"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1608.17, 455.833, 0, 0, 0, 0, 1617, 588, 0, 0, 0, 0, 1980, 588)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_u0wsj"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 5, -130, 0, 0, 0, 0, -30, -130, 0, 0, 0, 0, -30, -149)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_opqmb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 20)
}
point_count = 2

[sub_resource type="SpriteFrames" id="SpriteFrames_p8mnb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_ivcbf")
}, {
"duration": 1.0,
"texture": ExtResource("7_r3m0y")
}, {
"duration": 1.0,
"texture": ExtResource("6_4gv6q")
}, {
"duration": 1.0,
"texture": ExtResource("5_ihh3w")
}, {
"duration": 1.0,
"texture": ExtResource("4_ancd8")
}],
"loop": false,
"name": &"close",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ancd8")
}, {
"duration": 1.0,
"texture": ExtResource("5_ihh3w")
}, {
"duration": 1.0,
"texture": ExtResource("6_4gv6q")
}, {
"duration": 1.0,
"texture": ExtResource("7_r3m0y")
}, {
"duration": 1.0,
"texture": ExtResource("8_ivcbf")
}],
"loop": false,
"name": &"open",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_cde5d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_pvan3")
}, {
"duration": 1.0,
"texture": ExtResource("21_ahkmg")
}, {
"duration": 1.0,
"texture": ExtResource("20_4ke4w")
}, {
"duration": 1.0,
"texture": ExtResource("19_xd2am")
}, {
"duration": 1.0,
"texture": ExtResource("18_yiqqs")
}, {
"duration": 1.0,
"texture": ExtResource("17_qj57u")
}],
"loop": false,
"name": &"close",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_qj57u")
}, {
"duration": 1.0,
"texture": ExtResource("18_yiqqs")
}, {
"duration": 1.0,
"texture": ExtResource("19_xd2am")
}, {
"duration": 1.0,
"texture": ExtResource("20_4ke4w")
}, {
"duration": 1.0,
"texture": ExtResource("21_ahkmg")
}, {
"duration": 1.0,
"texture": ExtResource("22_pvan3")
}],
"loop": false,
"name": &"open",
"speed": 10.0
}]

[sub_resource type="Curve2D" id="Curve2D_v4e0l"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 50, 0)
}
point_count = 2

[sub_resource type="SpriteFrames" id="SpriteFrames_sfhkv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_g6535")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.6,
"texture": ExtResource("24_mw65c")
}, {
"duration": 0.6,
"texture": ExtResource("25_0vo5n")
}, {
"duration": 0.6,
"texture": ExtResource("26_mgua0")
}, {
"duration": 0.6,
"texture": ExtResource("27_0wev4")
}, {
"duration": 0.6,
"texture": ExtResource("28_v78sb")
}],
"loop": false,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="Curve2D" id="Curve2D_ynjq5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -0.666626, -2, 0, 0, 0, 0, 230, -2)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_x76w8"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -142)
}
point_count = 2

[sub_resource type="Animation" id="Animation_nsra5"]
resource_name = "music_fade_out"

[sub_resource type="Animation" id="Animation_hgyf6"]
resource_name = "room1_cover"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Room1Cover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_unc06"]
resource_name = "room1_cover_fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Room1Cover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ug8fn"]
resource_name = "room2_cover"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Room2Cover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_gwb5y"]
resource_name = "room2_cover_fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Room2Cover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_caml7"]
resource_name = "room3_cover"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Room3Cover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_dyd56"]
resource_name = "room3_cover_fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Room3Cover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_gvg2b"]
resource_name = "room4_cover"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Room4Cover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_0negj"]
resource_name = "room4_cover_fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Room4Cover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j0nex"]
_data = {
"music_fade_out": SubResource("Animation_nsra5"),
"room1_cover": SubResource("Animation_hgyf6"),
"room1_cover_fade": SubResource("Animation_unc06"),
"room2_cover": SubResource("Animation_ug8fn"),
"room2_cover_fade": SubResource("Animation_gwb5y"),
"room3_cover": SubResource("Animation_caml7"),
"room3_cover_fade": SubResource("Animation_dyd56"),
"room4_cover": SubResource("Animation_gvg2b"),
"room4_cover_fade": SubResource("Animation_0negj")
}

[sub_resource type="Curve2D" id="Curve2D_coqhu"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 4468, 725, 0, 0, 0, 0, 4580, 419)
}
point_count = 2

[node name="world" type="Node2D"]
script = ExtResource("1_jxgm3")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -318.0
offset_top = -225.0
offset_right = 5512.0
offset_bottom = 2699.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0, 0, 1)

[node name="Room1" parent="." instance=ExtResource("1_u157h")]

[node name="EnterRoom1" type="Path2D" parent="Room1"]
position = Vector2(911.833, 1174.67)
curve = SubResource("Curve2D_uv60c")

[node name="PathFollow2D" type="PathFollow2D" parent="Room1/EnterRoom1"]
position = Vector2(0, -30)
rotates = false
loop = false

[node name="Player" parent="Room1/EnterRoom1/PathFollow2D" instance=ExtResource("4_w582j")]
scale = Vector2(1.5, 1.5)

[node name="EnterRoom1Door" type="AnimatedSprite2D" parent="Room1"]
position = Vector2(912, 1080)
sprite_frames = SubResource("SpriteFrames_3ta1d")
animation = &"open"

[node name="LeaveRoom1" type="Path2D" parent="Room1"]
position = Vector2(936, 738)
scale = Vector2(1.03681, 1)
curve = SubResource("Curve2D_27mid")

[node name="PathFollow2D" type="PathFollow2D" parent="Room1/LeaveRoom1"]
position = Vector2(38.2584, 1.5)
rotation = 0.000448112
rotates = false
loop = false

[node name="Player" parent="Room1/LeaveRoom1/PathFollow2D" instance=ExtResource("4_w582j")]
position = Vector2(-1.52588e-05, 3.8147e-06)
scale = Vector2(1.5, 1.5)

[node name="LeaveRoom1Door" type="AnimatedSprite2D" parent="Room1"]
visible = false
position = Vector2(1128, 609)
sprite_frames = SubResource("SpriteFrames_knhi5")
animation = &"open"

[node name="Room1Camera" type="Camera2D" parent="Room1"]
position = Vector2(513.834, 576)
anchor_mode = 0
zoom = Vector2(0.58, 0.58)

[node name="Room2" parent="." instance=ExtResource("3_yrd6d")]
position = Vector2(0, -1)

[node name="EnterRoom2Door" type="AnimatedSprite2D" parent="Room2"]
visible = false
position = Vector2(1298, 419)
sprite_frames = SubResource("SpriteFrames_qchfk")
animation = &"open"

[node name="EnterRoom2" type="Path2D" parent="Room2"]
position = Vector2(1133, 493)
curve = SubResource("Curve2D_3vq65")

[node name="PathFollow2D" type="PathFollow2D" parent="Room2/EnterRoom2"]
position = Vector2(-5, -0.5)
rotation = 0.000448112
rotates = false
loop = false

[node name="Player" parent="Room2/EnterRoom2/PathFollow2D" instance=ExtResource("4_w582j")]
position = Vector2(-1.52662e-05, 0)
scale = Vector2(1.5, 1.5)

[node name="LeaveRoom2Door" type="AnimatedSprite2D" parent="Room2"]
visible = false
position = Vector2(1730, 562.5)
sprite_frames = SubResource("SpriteFrames_qi83a")
animation = &"open"

[node name="LeaveRoom2" type="Path2D" parent="Room2"]
curve = SubResource("Curve2D_ivllc")

[node name="PathFollow2D" type="PathFollow2D" parent="Room2/LeaveRoom2"]
position = Vector2(1608.17, 455.833)
rotates = false
loop = false

[node name="Player" parent="Room2/LeaveRoom2/PathFollow2D" instance=ExtResource("4_w582j")]
scale = Vector2(1.5, 1.5)

[node name="Room2Camera" type="Camera2D" parent="Room2"]
position = Vector2(1483, 441)
zoom = Vector2(0.581, 0.581)

[node name="Room4" parent="." instance=ExtResource("15_eua0n")]
position = Vector2(0, -1)

[node name="EnterRoom4" type="Path2D" parent="Room4"]
position = Vector2(2287, 404)
curve = SubResource("Curve2D_u0wsj")

[node name="PathFollow2D" type="PathFollow2D" parent="Room4/EnterRoom4"]
rotates = false
loop = false

[node name="Player" parent="Room4/EnterRoom4/PathFollow2D" instance=ExtResource("4_w582j")]
scale = Vector2(1.2, 1.2)

[node name="MoveChair" type="Path2D" parent="Room4"]
position = Vector2(2257, 271)
curve = SubResource("Curve2D_opqmb")

[node name="PathFollow2D" type="PathFollow2D" parent="Room4/MoveChair"]
rotates = false
loop = false

[node name="Chair" type="Sprite2D" parent="Room4/MoveChair/PathFollow2D"]
scale = Vector2(0.722, 0.722)
texture = ExtResource("22_po28j")

[node name="Room4Camera" type="Camera2D" parent="Room4"]
position = Vector2(2243.17, 270)
zoom = Vector2(0.83, 0.83)

[node name="Room3" parent="." instance=ExtResource("23_s2607")]
position = Vector2(0, -1)

[node name="EnterRoom3Door" type="AnimatedSprite2D" parent="Room3"]
visible = false
position = Vector2(2066, 563)
sprite_frames = SubResource("SpriteFrames_p8mnb")
animation = &"open"

[node name="LeaveRoom3Door" type="AnimatedSprite2D" parent="Room3"]
visible = false
position = Vector2(2280, 466.5)
sprite_frames = SubResource("SpriteFrames_cde5d")
animation = &"open"

[node name="MoveSecurity" type="Path2D" parent="Room3"]
position = Vector2(2285, 512)
curve = SubResource("Curve2D_v4e0l")

[node name="PathFollow2D" type="PathFollow2D" parent="Room3/MoveSecurity"]
rotates = false
loop = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Room3/MoveSecurity/PathFollow2D"]
position = Vector2(4.30346e-05, -6.79493e-06)
scale = Vector2(0.798702, 0.798702)
sprite_frames = SubResource("SpriteFrames_sfhkv")
animation = &"idle"

[node name="EnterRoom3" type="Path2D" parent="Room3"]
position = Vector2(1904, 590)
curve = SubResource("Curve2D_ynjq5")

[node name="PathFollow2D" type="PathFollow2D" parent="Room3/EnterRoom3"]
position = Vector2(-0.666626, -2)
rotates = false
loop = false

[node name="Player" parent="Room3/EnterRoom3/PathFollow2D" instance=ExtResource("4_w582j")]
scale = Vector2(1.5, 1.5)

[node name="LeaveRoom3" type="Path2D" parent="Room3"]
position = Vector2(2285, 550)
curve = SubResource("Curve2D_x76w8")

[node name="PathFollow2D" type="PathFollow2D" parent="Room3/LeaveRoom3"]
rotates = false
loop = false

[node name="Player" parent="Room3/LeaveRoom3/PathFollow2D" instance=ExtResource("4_w582j")]
scale = Vector2(1.2, 1.2)

[node name="Room3Camera" type="Camera2D" parent="Room3"]
position = Vector2(2244.67, 614)
zoom = Vector2(0.84, 0.84)

[node name="Room4Cover" type="ColorRect" parent="."]
visible = false
z_index = 2
offset_left = 11417.0
offset_top = 402.0
offset_right = 15498.0
offset_bottom = 2984.0
color = Color(0, 0, 0, 1)

[node name="Room3Cover" type="ColorRect" parent="."]
visible = false
z_index = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 11340.0
offset_top = 2492.0
offset_right = 15497.0
offset_bottom = 4959.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Room2Cover" type="ColorRect" parent="."]
visible = false
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6337.0
offset_top = 837.0
offset_right = 11536.0
offset_bottom = 4179.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Room1Cover" type="ColorRect" parent="."]
visible = false
z_index = 2
offset_left = 2968.0
offset_top = 3327.0
offset_right = 8156.0
offset_bottom = 6672.0
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j0nex")
}

[node name="Audio" parent="." instance=ExtResource("30_vp5yh")]

[node name="ZoomIn" type="Path2D" parent="."]
position = Vector2(8997, 890)
curve = SubResource("Curve2D_coqhu")

[node name="PathFollow2D" type="PathFollow2D" parent="ZoomIn"]
position = Vector2(4468, 725)
rotates = false
loop = false

[node name="ZoomingCamera" type="Camera2D" parent="ZoomIn/PathFollow2D"]
zoom = Vector2(0.83, 0.83)

[connection signal="isMoving" from="." to="Room1/EnterRoom1/PathFollow2D/Player" method="_on_world_is_moving"]
[connection signal="isMoving" from="." to="Room1/LeaveRoom1/PathFollow2D/Player" method="_on_world_is_moving"]
[connection signal="isMoving" from="." to="Room2/EnterRoom2/PathFollow2D/Player" method="_on_world_is_moving"]
[connection signal="isMoving" from="." to="Room2/LeaveRoom2/PathFollow2D/Player" method="_on_world_is_moving"]
[connection signal="isMoving" from="." to="Room4/EnterRoom4/PathFollow2D/Player" method="_on_world_is_moving"]
[connection signal="isMoving" from="." to="Room3/EnterRoom3/PathFollow2D/Player" method="_on_world_is_moving"]
[connection signal="isMoving" from="." to="Room3/LeaveRoom3/PathFollow2D/Player" method="_on_world_is_moving"]
[connection signal="win" from="Room1" to="." method="_on_win"]
[connection signal="win" from="Room2" to="." method="_on_win"]
[connection signal="win" from="Room3" to="." method="_on_win"]
